<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="userHint">Enter Something</string>
    <string name="buttonDisName">Display</string>
    <string name="textDisSmt">Display what the user enters</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>